[package]
name = "aleksandr-vinokurov-cv"
description = "Aleksandr Vinokurov CV"
keywords = ["cv", "personal", "backend", "developer", "team-lead"]
authors = ["Aleksandr Vinokurov <aleksandr.vin@gmail.com>"]
license = "CC-BY-NC-ND-4.0"
version = "2023.10.1"
readme = "README.md"
repository = "https://github.com/aleksandr-vin/CV/"
categories = [
    "authentication",
    "command-line-utilities",
    "development-tools::testing",
    "network-programming",
    "web-programming",
]
edition = "2021"
include = ["src/**/*.rs", "src/*.tex", "src/*.jpg", "Cargo.toml"]

[dependencies]
chrono = "0.4.31"
image = "0.24.7"
tectonic = "0.14.1"
